--- a/templates/index.html
+++ b/templates/index.html
@@ -126,7 +126,7 @@
 </div>
 
 <div class="footer">
-    <p>Azure Alerts Dashboard | <a href="https://github.com/your-repo-link">GitHub</a></p>
+    <p>Azure Alerts Dashboard | <a href="https://github.com/eyogesh007/azurealertsdashboard">GitHub</a></p>
 </div>
 
 </body>
